name:                language-rust
version:             0.1.0.0
synopsis:            Haskell library for parsing and pretty printing Rust source code.
-- description:         
homepage:            https://github.com/harpocrates/language-rust
license:             BSD3
license-file:        LICENSE
author:              Alec Theriault
maintainer:          alec.theriault@gmail.com
copyright:           (c) Alec Theriault, 2017
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  ghc-options:         -Wall
  build-tools:         alex, happy
  default-language:    Haskell2010

  exposed-modules:     Language.Rust.Syntax.Ident
                       Language.Rust.Syntax.AST
                       Language.Rust.Syntax.Token
                       Language.Rust.Parser
                       Language.Rust.Parser.ParseMonad
                       Language.Rust.Parser.Lexer
                       Language.Rust.Parser.Literals
                       Language.Rust.Pretty
                       Language.Rust.Data.Position
                       Language.Rust.Data.InputStream
 
  other-modules:       Language.Rust.Parser.Internal
                       Language.Rust.Pretty.Internal

  other-extensions:    OverloadedStrings
                     , OverloadedLists
                     , DuplicateRecordFields
                     , InstanceSigs
                     , DeriveGeneric
                     , DeriveDataTypeable
                     , CPP
                     , DeriveFunctor

  build-depends:       base >=4.9 && <4.10
                     , wl-pprint-annotated >= 0.0.1 && < 0.0.2
                     , transformers >=0.5 && <0.6
                     , array >=0.5 && <0.6
                     , bytestring >= 0.10
                     , utf8-string >= 1.0


test-suite tests
  hs-source-dirs:      tests
  main-is:             Main.hs
  other-modules:       LexerTest
                       ParserTest
                       PrettyTest
  Type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10
                     , Cabal >= 1.10.0
                     , transformers >=0.5 && <0.6
                     , HUnit
                     , wl-pprint-annotated >= 0.0.1 && < 0.0.2
                     , test-framework
                     , test-framework-hunit >= 0.3.0
                     , language-rust
