name:                language-rust
version:             0.1.0.0
synopsis:            Haskell library for parsing and pretty printing Rust source code.
-- description:         
homepage:            https://github.com/harpocrates/language-rust
license:             BSD3
license-file:        LICENSE
author:              Alec Theriault
maintainer:          alec.theriault@gmail.com
copyright:           (c) 2017 Alec Theriault
stability:           alpha
bug-reports:         https://github.com/harpocrates/language-rust/issues
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

source-repository head
  type:              git
  location:          https://github.com/harpocrates/language-rust.git

flag useByteStrings
    description:     Use ByteString as InputStream datatype
    default:         True

flag enableQuasiquotes
    description:     Provide the experimental 'Language.Rust.Quote' module
    default:         False

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  build-tools:         alex, happy
  default-language:    Haskell2010

  exposed-modules:     Language.Rust.Syntax.Ident
                       Language.Rust.Syntax.AST
                       Language.Rust.Syntax.Token
                       Language.Rust.Parser
                       Language.Rust.Parser.ParseMonad
                       Language.Rust.Parser.Lexer
                       Language.Rust.Pretty
                       Language.Rust.Pretty.Internal
                       Language.Rust.Data.Position
                       Language.Rust.Data.InputStream
  if flag(enableQuasiquotes)
    exposed-modules:   Language.Rust.Quote
 
  other-modules:       Language.Rust.Parser.Internal
                       Language.Rust.Parser.Literals
                       Language.Rust.Pretty.Resolve

  other-extensions:    OverloadedStrings
                     , OverloadedLists
                     , DuplicateRecordFields
                     , DeriveGeneric
                     , DeriveDataTypeable
                     , CPP
                     , DeriveFunctor

  build-depends:       base >=4.9 && <4.10
                     , wl-pprint-annotated >=0.0.1 && <0.0.2
                     , transformers >=0.5 && <0.6
                     , array >=0.5 && <0.6

  if flag(useByteStrings)
    build-depends:     utf8-string >=1.0
                     , bytestring >=0.10
  else
    cpp-options:       -DNO_BYTESTRING

  if flag(enableQuasiquotes)
    build-depends:     template-haskell >=2.10


test-suite unit-tests
  hs-source-dirs:      tests/unit-tests
  main-is:             Main.hs
  other-modules:       LexerTest
                       ParserTest
                       PrettyTest
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10
                     , Cabal >= 1.10.0
                     , transformers >=0.5 && <0.6
                     , HUnit
                     , wl-pprint-annotated >= 0.0.1 && < 0.0.2
                     , test-framework
                     , test-framework-hunit >= 0.3.0
                     , language-rust

test-suite rustc-tests
  hs-source-dirs:      tests/rustc-tests
  main-is:             Main.hs
  other-modules:       Diff
                       DiffUtils
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10
                     , Cabal >= 1.10.0
                     , process >= 1.3
                     , bytestring >=0.10
                     , aeson >= 1.0.0.0
                     , directory >= 1.3.0.0
                     , filepath >= 1.4.0.0
                     , transformers >=0.5 && <0.6
                     , test-framework
                     , vector
                     , unordered-containers
                     , language-rust
